[gd_scene load_steps=11 format=2]

[ext_resource path="res://actors/enemies/projectiles/laser/laser.gd" type="Script" id=1]
[ext_resource path="res://actors/enemies/projectiles/laser/textures/beam.png" type="Texture" id=2]
[ext_resource path="res://actors/enemies/projectiles/laser/shaders/laser_impact.shader" type="Shader" id=3]
[ext_resource path="res://actors/enemies/projectiles/laser/shaders/laser_antialias.shader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 3 )
shader_param/impact_color = Color( 1, 0.309804, 0.470588, 1 )
shader_param/impact_radius_uv = 0.5

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 1, 0.309804, 0.470588, 1, 1, 0.309804, 0.470588, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
spread = 40.0
gravity = Vector3( 1, 0, 0 )
initial_velocity = -50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 5 )

[node name="Laser" type="Node2D"]
script = ExtResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( 10, 0 )
collision_mask = 516

[node name="OuterBeam" type="Line2D" parent="."]
material = SubResource( 1 )
width = 4.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 2
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="InnerBeam" type="Line2D" parent="."]
material = SubResource( 2 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 2
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="WidthTween" type="Tween" parent="."]

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]

[node name="BeamEnd" type="Position2D" parent="."]
visible = false
position = Vector2( 10, 0 )

[node name="BeamImpact" type="Sprite" parent="BeamEnd"]
material = SubResource( 3 )
texture = ExtResource( 2 )

[node name="ImpactSparks" type="Particles2D" parent="BeamEnd"]
emitting = false
amount = 10
lifetime = 0.5
randomness = 1.0
draw_order = 1
process_material = SubResource( 6 )
